# gaiad_auto

./: Cargo.toml  Dockerfile  README.md
setup/: test.sh
src/: application.rs  commands.rs  config.rs  lib.rs
src/commands/: start.rs
tests/: acceptance.rs
